1.14.116.alpha.1 - 6th July 2023
- PTR (1.14.4): Updated 'Resisze quest text' ('Text').

1.14.115 - 5th July 2023
- PTR (1.14.4): Preliminary code update for game version 1.14.4 (hardcore realms).
- PTR (1.14.4): The 'Block duels' option ('Social') now includes 'Duel to the death'.
- Added flight times.

1.14.114 - 28th June 2023
- Updated LibDBIcon.
- Added flight times.

1.14.113 - 19th June 2023
- Added flight times.

1.14.112 - 4th June 2023
- Added flight times.

1.14.111 - 27th May 2023
- For 'Sell junk automatically' ('Automation'), Leatrix Plus will stop attempting to sell items if your character is at the gold cap.
- Added flight times.

1.14.110 - 20th May 2023
- Added flight times.

1.14.109 - 10th May 2023
- Added flight times.

1.14.108 - 3rd May 2023
- For 'Easy item destroy' ('System'), fixed an issue which caused a Lua error when clicking outside of the destroy confirmation.
- Added flight times.

1.14.107 - 25th April 2023
- Added flight times.

1.14.106 - 22nd April 2023
- Added flight times.

1.14.105 - 19th April 2023
- Added flight times.

1.14.104 - 15th April 2023
- Added flight times.

1.14.102 - 31st March 2023
- Added flight times.

1.14.101 - 27th March 2023
- Added flight times.

1.14.99 - 23rd March 2023
- Added flight times.

1.14.98 - 18th March 2023
- Added flight times.

1.14.97 - 15th March 2023
- Added flight times.

1.14.96 - 13th March 2023
- Added flight times.

1.14.95 - 7th March 2023
- Added flight times.

1.14.94 - 5th March 2023
- Added flight times.

1.14.92 - 3rd March 2023
- Added flight times.

1.14.90 - 1st March 2023
- Added flight times.

1.14.84 - 26th February 2023
- Added flight times.

1.14.83 - 19th February 2023
- Added flight times.

1.14.82 - 8th February 2023
- For 'Recent chat window' ('Chat'), fixed an issue which caused texture atlases to break dragging and selecting messages.
- For 'Show durability status' ('Interface'), fixed a bug which caused ranged weapons to be excluded.
- Updated LibDBIcon.